Fix some tests after secure mode was introduced. Include tissue visibility switch for faulty data too.

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -339,7 +339,7 @@ div {box-sizing: initial !important;}
 .bg-opacity.fixed-bg-opacity::before {z-index: -1;}
 .system-container { position: fixed; width: 60%; left: 18%; transform: translate(0, calc(50vh - 50%)); color: var(--color-border-inverse);}
 .system-container .material-icons {color: var(--color-border-inverse);}
-#main-panel {z-index: 90;right: 0;transition: right 0.3s;user-select: none;}
+#main-panel {z-index: 90;right: 0;transition: right 0.3s;user-select: none;background: var(--color-bg-primary); }
 #main-panel-hide {cursor: pointer;margin-left: -12px;}
 #main-panel-show {position: fixed;z-index: 89;top: 5px;right: 5px;cursor: pointer;text-shadow: 0 0 20px #ffffff;}
 .inner-panel {padding: 3px 0 15px 0;position: relative;}
